@@ -2,7 +2,9 @@
 Changes with Apache 2.5.0
 
   *) mod_http2: better performance, eliminated need for nested locks and
-     thread privates. [Stefan Eissing]
+     thread privates. Moving request setups from the main connection to the
+     worker threads. Increase number of spare connections kept.
+     [Stefan Eissing]
      
   *) core: Disallow multiple Listen on the same IP:port when listener buckets
      are configured (ListenCoresBucketsRatio > 0), consistently with the single
